<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.swaylight.SlLightFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingRight="20dp"
        android:paddingLeft="20dp">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/light_card_bg"
            app:cardCornerRadius="20dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/grad_tab"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/light_card_title_bg"
                    android:orientation="horizontal"
                    android:paddingLeft="15dp"
                    android:paddingTop="10dp"
                    android:paddingRight="15dp"
                    android:paddingBottom="5dp"
                    android:weightSum="10">

                    <TextView
                        android:id="@+id/tv_grad"
                        style="@style/tv_mode_selected"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start|center_vertical"
                        android:layout_weight="9"
                        android:fontFamily="@font/pt_sans_narrow"
                        android:letterSpacing="0.05"
                        android:text="color"
                        android:textAllCaps="true"
                        android:textSize="24sp" />

                </LinearLayout>

                <RelativeLayout
                    android:id="@+id/grad_control_card"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <HorizontalScrollView
                        android:id="@+id/grad_circle_scrollview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="15dp"
                        android:paddingTop="10dp"
                        android:paddingRight="15dp"
                        android:paddingBottom="5dp">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal" >

                            <LinearLayout
                                android:id="@+id/grad_circle_group"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal"
                                android:paddingRight="5dp">
                            </LinearLayout>

                            <ImageButton
                                android:id="@+id/bt_add_grad"
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                android:layout_gravity="center_vertical"
                                android:background="@android:color/transparent"
                                android:padding="5dp"
                                android:src="@drawable/ic_plus" />

                        </LinearLayout>

                    </HorizontalScrollView>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/grad_circle_scrollview"
                        android:orientation="horizontal"
                        android:paddingLeft="15dp"
                        android:paddingTop="10dp"
                        android:paddingRight="15dp"
                        android:paddingBottom="15dp">

                        <com.swaylight.custom_ui.EqualizerView
                            android:id="@+id/equalizer_view"
                            android:layout_width="200dp"
                            android:layout_height="120dp"
                            app:freq_size="32"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:level_size="10"
                            app:high_color="@color/red"
                            app:medium_color="@color/yellow"
                            app:low_color="@color/green" />

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="0dp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/equalizer_view"
                            app:layout_constraintTop_toTopOf="parent"
                            android:orientation="vertical"
                            android:weightSum="3" >

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="0dp"
                                android:layout_weight="1">
                                <com.swaylight.custom_ui.CircleView
                                    android:id="@+id/music_high_circle"
                                    android:layout_width="40dp"
                                    android:layout_height="40dp"
                                    android:startColor="@android:color/white"
                                    android:endColor="@android:color/white"
                                    android:centerColor="@android:color/white"/>

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/high"
                                    android:fontFamily="@font/pt_sans_narrow"
                                    android:letterSpacing="0.05"
                                    android:textAllCaps="true"
                                    android:textSize="20sp"
                                    android:layout_gravity="center_vertical"/>

                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="0dp"
                                android:layout_weight="1">
                                <com.swaylight.custom_ui.CircleView
                                    android:id="@+id/music_medium_circle"
                                    android:layout_width="40dp"
                                    android:layout_height="40dp"
                                    android:startColor="@android:color/white"
                                    android:endColor="@android:color/white"
                                    android:centerColor="@android:color/white"/>
                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/middle"
                                    android:fontFamily="@font/pt_sans_narrow"
                                    android:letterSpacing="0.05"
                                    android:textAllCaps="true"
                                    android:textSize="20sp"
                                    android:layout_gravity="center_vertical"/>

                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="0dp"
                                android:layout_weight="1">
                                <com.swaylight.custom_ui.CircleView
                                    android:id="@+id/music_low_circle"
                                    android:layout_width="40dp"
                                    android:layout_height="40dp"
                                    android:startColor="@android:color/white"
                                    android:endColor="@android:color/white"
                                    android:centerColor="@android:color/white"/>
                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/low"
                                    android:fontFamily="@font/pt_sans_narrow"
                                    android:letterSpacing="0.05"
                                    android:textAllCaps="true"
                                    android:textSize="20sp"
                                    android:layout_gravity="center_vertical"/>

                            </LinearLayout>
                        </LinearLayout>
                    </androidx.constraintlayout.widget.ConstraintLayout>

                </RelativeLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/light_card_bg"
            app:cardCornerRadius="20dp"
            app:cardUseCompatPadding="true"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/rgb_tab"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="10"
                    android:paddingTop="10dp"
                    android:paddingBottom="5dp"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:background="@color/light_card_title_bg">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:padding="5dp"
                        android:src="@drawable/gradient_circle"/>

                    <TextView
                        android:id="@+id/tv_rgb"
                        style="@style/tv_mode_unselected"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start|center_vertical"
                        android:fontFamily="@font/pt_sans_narrow"
                        android:letterSpacing="0.05"
                        android:text="@string/rgb"
                        android:textAllCaps="true"
                        android:textSize="24sp" />

                </LinearLayout>

                <RelativeLayout
                    android:id="@+id/rgb_control_card"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <HorizontalScrollView
                        android:id="@+id/rgb_circle_scrollview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="15dp"
                        android:paddingTop="10dp"
                        android:paddingRight="15dp"
                        android:paddingBottom="5dp" >
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/rgb_circle_group"
                            android:orientation="horizontal" >
                            <ImageButton
                                android:id="@+id/bt_add_rgb"
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                android:src="@drawable/ic_plus"
                                android:background="@android:color/transparent"
                                android:layout_gravity="center_vertical"
                                android:padding="5dp"/>
                        </LinearLayout>

                    </HorizontalScrollView>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/rgb_circle_scrollview"
                        android:paddingLeft="15dp"
                        android:paddingTop="10dp"
                        android:paddingRight="15dp"
                        android:paddingBottom="5dp">

                        <ImageButton
                            android:id="@+id/bt_rgb_color"
                            android:layout_width="90dp"
                            android:layout_height="110dp"
                            android:layout_gravity="center_vertical"
                            android:background="@android:color/transparent"
                            android:paddingTop="10dp"
                            android:paddingBottom="10dp"
                            android:paddingRight="3dp"
                            android:src="@drawable/bg_round"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical"
                            android:weightSum="3">

                            <SeekBar
                                android:id="@+id/sb_red"
                                android:layout_width="match_parent"
                                android:layout_height="0dp"
                                android:layout_weight="1"
                                android:max="255"
                                android:progressDrawable="@drawable/progress_r"
                                android:splitTrack="false"
                                android:thumb="@drawable/thumb" />

                            <SeekBar
                                android:id="@+id/sb_green"
                                android:layout_width="match_parent"
                                android:layout_height="0dp"
                                android:layout_weight="1"
                                android:max="255"
                                android:progressDrawable="@drawable/progress_g"
                                android:splitTrack="false"
                                android:thumb="@drawable/thumb" />

                            <SeekBar
                                android:id="@+id/sb_blue"
                                android:layout_width="match_parent"
                                android:layout_height="0dp"
                                android:layout_weight="1"
                                android:max="255"
                                android:progressDrawable="@drawable/progress_b"
                                android:splitTrack="false"
                                android:thumb="@drawable/thumb" />
                        </LinearLayout>

                    </LinearLayout>

                </RelativeLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</FrameLayout>
